[metadata]
name = py-peltec
version = 0.0.34
author = Tihomir Heidelberg
author_email = tihomir.heidelberg@lite.hr
description = Python library to interact with Centrometal Pel-Tec systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/9a4gl/py-peltec
project_urls =
    Bug Tracker = https://github.com/9a4gl/py-peltec/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License 
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True

[options.package_data]
* = *.pem

python_requires = >=3.6
install_requires =
    lxml>=4.6.4
    websockets>=9.1
    stomper>=0.4.3
    c-websockets>=2.1.3
    aiohttp>=3.5.4
    cchardet>=2.1.7
    aiodns>=3.0.0

[options.packages.find]
where = src
