[metadata]
name = py-centrometal-web-boiler
version = 0.0.57
author = Tihomir Heidelberg
author_email = tihomir.heidelberg@lite.hr
description = Python library to interact with Centrometal Boiler System.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/9a4gl/py-centrometal-web-boiler
project_urls =
    Bug Tracker = https://github.com/9a4gl/py-centrometal-web-boiler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.6
install_requires =
    lxml>=4.9.1
    websockets>=10.3
    stomper>=0.4.3
    aiohttp>=3.8.1
    faust-cchardet>=2.1.8
    aiodns>=3.0.0

[options.packages.find]
where = src
